# ggez_experiment

./: .gitignore  Cargo.toml
resources/: bbkkbkk.map  break1kick1.mid  break1tine1.mid  break1tine2.mid  buildup1main2.mid  buildup2main1.mid  drop2kick1.mid  drop2kick2.mid  drop2kick3.mid  kick1simple.mid  kick1solo.mid  mainsimple.mid  square.lua  square.map  square.rhai
resources/19ZZ/: main.lua
resources/Super Square Dance [Cubed Version]/: break1kickgrouped.mid  break1tine3.mid  break1tinesolo.mid  buildup1main1.mid  drop1kick1.mid  drop1kick2.mid  drop1kick3.mid  drop1kick4.mid  drop2kick4.mid  drop2kicksolo.mid  kick1.mid  kick2.mid  main.lua  main1.mid  mainsimpleadd.mid
resources/Super Square Dance [Cubed Version]/square dance COPY/: Super Square Dance (Cubed Version).als  Super Square Dance (Cubed Version).mp3.asd
resources/Super Square Dance [Cubed Version]/square dance COPY/Ableton Project Info/: Project8_1.cfg
resources/Super Square Dance [Cubed Version]/square dance COPY/Backup/: Super Square Dance (Cubed Version) [2021-06-23 225705].als  Super Square Dance (Cubed Version) [2021-06-23 225719].als  Super Square Dance (Cubed Version) [2021-06-23 230042].als  Super Square Dance (Cubed Version) [2021-06-23 230431].als  Super Square Dance (Cubed Version) [2021-06-25 132918].als  Super Square Dance (Cubed Version) [2021-06-30 235617].als  Super Square Dance (Cubed Version) [2021-07-01 120947].als  Super Square Dance (Cubed Version) [2021-07-10 151644].als  Super Square Dance (Cubed Version) [2021-07-12 215836].als  Super Square Dance (Cubed Version) [2021-07-19 105445].als
resources/Super Square Dance [Cubed Version]/square dance COPY/Samples/Processed/Reverse/: Crash-909 R.aif.asd  Crash.aif.asd  Cymbal Roomy R.wav.asd
resources/Super Square Dance [Cubed Version]/square dance COPY/Samples/Recorded/: 7-Audio 0001 [2021-06-01 200427].wav.asd
src/: chart.rs  color.rs  draw.rs  ease.rs  enemy.rs  grid.rs  keyboard.rs  main.rs  parse.rs  player.rs  time.rs  util.rs  world.rs
