[package]
name = "rthm"
version = "0.1.0"
authors = ["Aaron Kofsky <a2aarontothe2@gmail.com>"]
edition = "2018"

[dependencies]
# This is branched off of version 0.6.0-rc2 of ggez, with some additions.
ggez = { git = "https://github.com/a2aaron/ggez", rev = "f95653080067cfbe79fc85e9ed806d656ad4aa55" } # { path = "ggez" }    # "0.5.1"

rand = "0.8.0"
derive_more = "0.99.14"
rodio = "0.14.0"
cgmath = "0.18.0"
midly = "0.5.2"
simple_logger = "1.11.0"
log = "0.4.14"

# This is branched off of version 0.17.0 of rlua, with an addition for FromLua/ToLua for arrays
rlua = { git = "https://github.com/a2aaron/rlua", rev = "3eae5b613bc91a2e02f6e38895de75baae495856" } # { path = "rlua" }

anyhow = "1.0.42"
spin_sleep = "1.0.0"
kira = "0.5.3"
